--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* resets */
 *,
 *::before,
 *::after {
@@ -13,4 +14,39 @@
 img {
   display: block;
   max-width: 100%;
+}
+
+button {
+  display: block;
+}
+
+/* main section */
+.main {
+  max-width: 40%;
+  margin-inline: auto;
+  margin-top: 10rem;
+}
+
+.main__title {
+  font-size: 2.5rem;
+}
+
+.main__description {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+
+.main__img-container {
+  text-align: center;
+}
+
+.main__btn {
+  width: 100%;
+  font-size: 1.5rem;
+  padding: 0.5rem 0;
+  margin-top: 0.5rem;
+}
+
+.main__btn--0margin {
+  margin: 0;
 }
