--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ button {
 
 .main__img-container {
   text-align: center;
+  max-width: 70%;
+  margin-inline: auto;
+  margin-bottom: 1rem;
 }
 
 .main__btn {
