Create function that listens for page reload.
when page gets reloaded DOMContentLoader will capture the reload and
change the page.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 img {
   display: block;
   max-width: 100%;
+  margin-inline: auto;
 }
 
 button {
@@ -37,8 +38,8 @@ button {
 }
 
 .main__img-container {
-  text-align: center;
   max-width: 70%;
+  text-align: center;
   margin-inline: auto;
   margin-bottom: 1rem;
 }
